SUBDIRS = doc_images gnome licenses Sections

docdir = $(pkgdatadir)/Documentation
doc_DATA = \
allegs.html \
chap1.html chap2.html chap3.html chap4.html chap5.html chap6.html chap7.html \
chap8.html chap9.html chap10.html chap11.html chap12.html chap13.html \
chap14.html chap15.html chap16.html chap17.html chap18.html chap19.html \
chap20.html chap21.html chap22.html chap23.html \
examples.html extensions.html index.html manifest.txt Rallegs.html \
Rchap1.html Rchap2.html Rchap3.html Rchap4.html Rchap5.html Rchap6.html \
Rchap7.html Rchap8.html Rchap9.html Rchap10.html Rchap11.html Rchap12.html \
Rchap13.html Rindex.html
EXTRA_DIST = $(doc_DATA)
