SUBDIRS = doc_images gnome licenses map_icons scene_icons sections

docdir = $(pkgdatadir)/doc
doc_DATA = \
chap10.html chap11.html chap12.html chap13.html chap14.html chap15.html \
chap16.html chap17.html chap18.html chap19.html chap1.html chap20.html \
chap21.html chap2.html chap3.html chap4.html chap5.html chap6.html chap7.html \
chap8.html chap9.html examples.html extensions.html index.html manifest.txt \
recipes.html
EXTRA_DIST = $(doc_DATA)
