docmapiconsdir = $(pkgdatadir)/map_icons
docmapicons_DATA = \
blank_ew.png blank_ns.png blank_square.png d_arrow_door_blocked.png \
d_arrow_door.png d_arrow.png e_arrow_door_blocked.png e_arrow_door_meet.png \
e_arrow_door.png e_arrow.png e_dot.png ew_spacer.png \
in_arrow_door_blocked.png in_arrow_door.png in_arrow.png long_ew.png \
long_ns.png n_arrow_door_blocked.png n_arrow_door_meet.png \
n_arrow_door.png n_arrow.png n_dot.png ne_arrow_corner_door.png \
ne_arrow_door_blocked.png ne_arrow_door_meet.png ne_arrow_door.png \
ne_arrow_dot.png ne_arrow.png ne_dot.png no_arrow.png ns_spacer.png \
nw_arrow_corner_door.png nw_arrow_door_blocked.png nw_arrow_door_meet.png \
nw_arrow_door.png nw_arrow_dot.png nw_arrow.png nw_dot.png \
out_arrow_door_blocked.png out_arrow_door.png out_arrow.png \
s_arrow_door_blocked.png s_arrow_door_meet.png s_arrow_door.png s_arrow.png \
s_dot.png se_arrow_corner_door.png se_arrow_door_blocked.png \
se_arrow_door_meet.png se_arrow_door.png se_arrow_dot.png se_arrow.png \
se_dot.png sw_arrow_corner_door.png sw_arrow_door_blocked.png \
sw_arrow_door_meet.png sw_arrow_door.png sw_arrow_dot.png sw_arrow.png \
sw_dot.png u_arrow_door_blocked.png u_arrow_door.png u_arrow.png \
w_arrow_door_blocked.png w_arrow_door_meet.png w_arrow_door.png w_arrow.png \
w_dot.png
EXTRA_DIST = $(docmapicons_DATA)
