stylesdir = $(pkgdatadir)/styles
styles_DATA = \
nocolor-nostyling.xml nocolor-somestyling.xml nocolor-styling.xml \
standard-color-styling.xml standard-somecolor-styling.xml \
standard-color-somestyling.xml standard-somecolor-somestyling.xml \
standard-color-nostyling.xml standard-somecolor-nostyling.xml \
subdued-color-styling.xml subdued-somecolor-styling.xml \
subdued-color-somestyling.xml subdued-somecolor-somestyling.xml \
subdued-color-nostyling.xml subdued-somecolor-nostyling.xml \
psychedelic-color-styling.xml psychedelic-somecolor-styling.xml \
psychedelic-color-somestyling.xml psychedelic-somecolor-somestyling.xml \
psychedelic-color-nostyling.xml psychedelic-somecolor-nostyling.xml
EXTRA_DIST = $(styles_DATA)
