stylesdir = $(pkgdatadir)/styles
dist_styles_DATA = nocolor-nostyling.xml nocolor-somestyling.xml \
	nocolor-styling.xml psychedelic-color-nostyling.xml \
	psychedelic-color-somestyling.xml psychedelic-color-styling.xml \
	psychedelic-somecolor-nostyling.xml psychedelic-somecolor-somestyling.xml \
	psychedelic-somecolor-styling.xml standard-color-nostyling.xml \
	standard-color-somestyling.xml standard-color-styling.xml \
	standard-somecolor-nostyling.xml standard-somecolor-somestyling.xml \
	standard-somecolor-styling.xml subdued-color-nostyling.xml \
	subdued-color-somestyling.xml subdued-color-styling.xml \
	subdued-somecolor-nostyling.xml subdued-somecolor-somestyling.xml \
	subdued-somecolor-styling.xml 

