uidir = $(pkgdatadir)/ui
dist_ui_DATA = \
	document.ui \
	extension.uimanager.xml \
	gnome-inform7.ui \
	gnome-inform7.uimanager.xml \
	newdialog.ui \
	panel.ui \
	panel.uimanager.xml \
	searchwindow.ui \
	source.ui \
	story.ui \
	story.uimanager.xml \
	welcomedialog.ui

-include $(top_srcdir)/git.mk
