dnl Master configuration file for Inform, in -*- m4 -*- mode.

dnl Process this file with autoconf to produce a configure script.

dnl Initialize.
AC_INIT(inform, 6.31.1)
AC_CONFIG_SRCDIR(src/inform.c)

dnl Extra config files go in this directory.
AC_CONFIG_AUX_DIR(config)

dnl Set package info.
INFORM_VERSION=6.31
AC_SUBST(INFORM_VERSION)

PACKAGE_VERSION=1
AC_SUBST(PACKAGE_VERSION)

AM_INIT_AUTOMAKE(foreign)

dnl Check for Cygwin.
AC_CYGWIN
AC_EXEEXT

AM_CONDITIONAL(CYGWIN, test "$CYGWIN" = yes)

dnl Check host system.
case $host in
*linux*)	HOST=LINUX;;
*)		HOST=UNIX;;
esac

AC_SUBST(HOST)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL

dnl Include common makefile stuff.
AC_SUBST_FILE(make_include)
make_include=$srcdir/config/commondefs

AC_OUTPUT(
Makefile
include/Makefile
lib/Makefile
src/Makefile
)
